Refactor navigation links and replace Home.html with index.html; remove Home.html file

--- a/ProjetosP.html
+++ b/ProjetosP.html
@@ -11,7 +11,7 @@
             <nav>
                 <h1>Projetos Pessoais</h1>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Hobbies.html">Hobbies</a></li>
                 </ul>
             </nav>
