--- a/Hobbies.html
+++ b/Hobbies.html
@@ -12,7 +12,7 @@
             <nav>
                 <h1>Pagina de hobbies</h1>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="ProjetosP.html">Projetos pessoais</a></li>
                 </ul>
             </nav>
