--- a/projeto1.html
+++ b/projeto1.html
@@ -13,7 +13,7 @@
             <nav>
                 <h1>Skeleton Cave</h1>
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="ProjetosP.html">Projetos pessoais</a></li>
                 </ul>
             </nav>
